--- a/assets/style/base/_mixin.scss
+++ b/assets/style/base/_mixin.scss
@@ -1,61 +1,94 @@
+@mixin card-style($width: 310px, $height: 542px, $gap: 15px) {
+  display: flex;
+  flex-direction: column;
+  width: $width;
+  height: $height;
+  gap: $gap;
 
-@mixin card-style ($width: 310px, $height: 542px,){
+  &-content-price p {
+    font-family: "Josefin Sans";
+    font-weight: 700;
+    font-size: 24px;
+    letter-spacing: 0;
+  }
+  &-content {
     display: flex;
     flex-direction: column;
-    width: $width;
-    height: $height;
+    gap: 10px;
+    padding-top: 35px;
+  }
+  &-content-title h5 {
+    font-family: "Josefin Sans";
+    font-weight: 600;
+    font-size: 32px;
+    letter-spacing: 0;
+  }
+  &-content-description p {
+    font-family: "Open Sans";
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 160%;
+    letter-spacing: 0;
+  }
+  &-buttons {
+    display: flex;
+    gap: 20px;
+    padding-top: 15px;
+  }
 
-    &-content-price p{
+  &-buttons-wrapper {
+    display: flex;
+    border: 2px solid #000000;
+    border-radius: 4px;
+  }
+  &-buttons-choose {
+    display: flex;
+    flex-direction: column;
+  }
+  &-buttons-number {
+    display: flex;
+    align-items: center;
+    border-right: 2px solid #000000;
+    button {
+      padding: 0px 24px;
       font-family: "Josefin Sans";
-      font-weight: 700;
+      font-weight: 500;
       font-size: 24px;
+      line-height: 130%;
       letter-spacing: 0;
-    }
-    &-content{
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        padding-top: 35px;
-    }
-    &-content-title h5 {
-      font-family: "Josefin Sans";
-      font-weight: 600;
-      font-size: 32px;
-      letter-spacing: 0;
-    }
-    &-content-description p {
-      font-family: "Open Sans";
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 160%;
-      letter-spacing: 0;
-    }
-    &-buttons-wrapper{
-        display: flex;
-    }
-    &-buttons-choose{
-        display: flex;
-        flex-direction: column;
-    }
-    &-buttons-number{
-        display: flex;
-        button{
-            padding: 13px 21px;
-            border: 3px solid #000000;
-        }
-    }
-    &-buttons-plus{
-        button{
-            padding: 10px 24px;
-            border: 3px solid #000000;
-        }
-        
-    }
-    &-buttons-minus{
-        button{
-            padding: 14px 24px;
-            border: 3px solid #000000;
-        }
-
     }
   }
+  &-buttons-plus {
+    border-bottom: 2px solid #000000;
+    button {
+      padding: 0px 20px;
+      padding-bottom: 2px;
+      font-family: "Josefin Sans";
+      font-size: 24px;
+    }
+  }
+  &-buttons-minus {
+    padding-left: 3px;
+    button {
+      padding: 0px 20px;
+      font-family: "Josefin Sans";
+      font-size: 24px;
+    }
+  }
+  &-buttons-submit-button {
+    display: flex;
+    align-items: center;
+    button {
+      padding: 15px 30px;
+      background-color: $danger-color;
+      color: $primary-color;
+      border-radius: $border-radius;
+      font-family: "Josefin Sans";
+      font-weight: 700;
+      font-size: 18px;
+      leading-trim: NONE;
+      line-height: 150%;
+      letter-spacing: 0%;
+    }
+  }
+}
