--- a/assets/style/sections/_catalog.scss
+++ b/assets/style/sections/_catalog.scss
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   padding-top: 140px;
+  padding-bottom: 140px;
   &__wrapper {
     display: flex;
     flex-direction: column;
