--- a/assets/style/base/_mixin.scss
+++ b/assets/style/base/_mixin.scss
@@ -86,9 +86,58 @@
       font-family: "Josefin Sans";
       font-weight: 700;
       font-size: 18px;
-      leading-trim: NONE;
       line-height: 150%;
       letter-spacing: 0%;
+    }
+  }
+}
+@mixin about__card($width: 362px, $height: 536px) {
+  display: flex;
+  flex-direction: column;
+  width: $width;
+  height: $height;
+  box-shadow: 40px 15px 136px 0px #00000033;
+  border-radius: 20px;
+  &-content {
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
+    padding-top: 30px;
+    &-title {
+      h5 {
+        font-family: "Josefin Sans";
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 1.3;
+        letter-spacing: 0;
+      }
+    }
+  }
+  &-buttons {
+    display: flex;
+    padding-left: 30px;
+    padding-top: 20px;
+    gap: 10px;
+    &-button {
+      button {
+        font-family: "Open Sans";
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 1.6;
+        letter-spacing: 0;
+        color: $danger-color;
+      }
+    }
+    &-arrow {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      &-arrow1 img {
+        transform: translateY(1.2px);
+      }
+      &-arrow2 img {
+        transform: translateX(-7px);
+      }
     }
   }
 }
