--- a/assets/style/sections/_header.scss
+++ b/assets/style/sections/_header.scss
@@ -6,36 +6,78 @@
   background-position: top center;
   background-repeat: no-repeat;
   padding-top: 50px;
+& .container{
+  @media (max-width: 1240px){
+    margin: 0 auto;
+  padding: 0 40px;
+}
+@media (max-width: 820px){
+  margin: 0 auto;
+  padding: 0 20px;
+
+}
+
+}
 
   &__wrapper {
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 331px;
+    @media (max-width: 1240px){
+      gap: 331px;
+    }
+    @media (max-width: 820px){
+      gap: 100px;
+    }
+    @media (max-width: 600px){
+      gap: 50px;
+    }
   }
   &__nav {
     display: flex;
     gap: 46px;
+    @media (max-width: 1240px){
+      gap: 30px;
+    }
   }
   &__nav-list {
     display: flex;
     gap: 60px;
     align-items: center;
+    
+    &-menu{
+      display: none;
+      img{
+
+        width: 50px;
+      }
+      @media (max-width: 1240px){
+        display: flex;
+      }
+    }
+    
   }
   &__nav-icons {
     display: flex;
     gap: 38px;
   }
-  &__nav-item a{
+  &__nav-item {
     font-family: "Open Sans";
 font-weight: 400;
 font-size: 18px;
 line-height: 160%;
 letter-spacing: 0%;
 color: $bg-color;
+@media (max-width: 1240px){
+display: none;
+    }
 
 &:hover{
     color: $danger-color;
     transition: $transition;
 }
+
   }
 
 }
