--- a/assets/style/sections/_hero.scss
+++ b/assets/style/sections/_hero.scss
@@ -2,6 +2,12 @@
   display: flex;
   align-items: center;
   padding-bottom: 110px;
+  & .container {
+    @media (max-width: 600px) {
+      margin: 0 auto;
+      padding: 0 10px;
+    }
+  }
   &__wrapper {
     padding-top: 110px;
   }
@@ -11,8 +17,7 @@
     gap: 28px;
   }
   &__content-title {
-    width: 524px;
-    height: 210px;
+
     h2 {
       font-family: "Josefin Sans";
       font-weight: 700;
@@ -20,11 +25,13 @@
       line-height: 120%;
       letter-spacing: 0%;
       color: $primary-color;
+      @media (max-width: 600px){
+       font-size: 34px; 
+      }
     }
   }
   &__content-description {
-    width: 506px;
-    height: 64px;
+
     p {
       font-family: "Open Sans";
       font-weight: 600;
